# WEB_HW_8

./: pyproject.toml
part_2/: consumer.py  producer.py
web_hw_8/: db_models.py  json_load.py  main.py  search.py
