[tool.poetry]
name = "web-hw-8"
version = "0.1.0"
description = ""
authors = ["AlexanderF048 <alexandr.frankevich@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_8"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.3.3"
mongoengine = "^0.26.0"
redis = "^4.4.2"
redis-lru = "^0.1.2"
pika = "^1.3.1"
celery = "^5.2.7"
faker = "^16.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
